adds step 3
