# dist/swagger.yaml
@@ -24,6 +24,22 @@ paths:
                         $ref: '#/definitions/MovieList'
                 '500':
                     description: 'Internal error'
+    /genres:
+        get:
+            tags:
+                - movies
+            summary: 'Gets a list of available genres'
+            description: 'List genres'
+            operationId: listGenres
+            produces:
+                - application/json
+            responses:
+                '200':
+                    description: 'successful operation'
+                    schema:
+                        $ref: '#/definitions/GenresList'
+                '500':
+                    description: 'Internal error'
     /user:
         get:
             tags:
@@ -57,10 +73,19 @@ definitions:
                     properties:
                         title:
                             type: string
-                        poster:
+                        poster_path:
                             type: string
-                        release:
+                        release_date:
                             type: string
+    GenresList:
+        type: array
+        items:
+            type: object
+            properties:
+                id:
+                    type: integer
+                name:
+                    type: string
     User:
         type: object
         properties:
